--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
 		<script>
 			Swal.fire({
-				title: '离开学时间不多了!',
+				title: '离开学不远了!',
 				icon: 'warning',
 				html: '<span id="timer"></span>'+'开学',
 				allowEscapeKey:false,
